--- a/public/stylesheets/welcome.css
+++ b/public/stylesheets/welcome.css
@@ -1,9 +1,6 @@
 html {
   background-color: #43484c;
-  background-image: url(/images/background.jpg);
-  background-image: url(/images/backgroundr.jpg);
-  background-repeat: no-repeat;
-  background-position: top center; }
+  background-image: url(/images/bg.png); }
 
 #custom-doc {
   width: 42.54em;
@@ -16,15 +13,20 @@ html {
   clear: both; }
 
 body {
-  margin: 20px 0;
+  margin: 70px 0;
   font-family: Lucida Grande, Verdana, Arial; }
+
+.twitter {
+  float: right;
+  margin-top: -20px;
+  margin-right: -20px; }
 
 #bd {
   border-width: 1px 1px 1px 1px;
   border-color: #5e5e5e;
   border-style: solid;
   background-color: #e8e8e8;
-  min-height: 400px; }
+  padding-bottom: 20px; }
 
 #hd {
   margin-top: 10px;
@@ -35,8 +37,6 @@ body {
 
 .welcome.index #info {
   padding: 20px; }
-  .welcome.index #info .twitter {
-    float: right; }
   .welcome.index #info .image {
     float: left;
     border: 1px solid #b7b7b7; }
@@ -45,9 +45,19 @@ body {
     .welcome.index #info .text .name {
       font-size: 189%; }
     .welcome.index #info .text .baseline {
-      margin-top: 10px;
-      font-size: 138.5%; }
+      font-size: 131%; }
+      .welcome.index #info .text .baseline p {
+        margin-top: 10px; }
+      .welcome.index #info .text .baseline a {
+        margin-right: 5px; }
 .welcome.index #twitter {
-  padding: 0 15px; }
+  padding: 0 15px;
+  min-height: 200px; }
   .welcome.index #twitter .twtr-hd, .welcome.index #twitter .twtr-ft {
     display: none; }
+.welcome.index #photos {
+  padding: 0 20px; }
+  .welcome.index #photos .image {
+    float: left;
+    margin: 0 11px 0 11px;
+    border: 1px solid #b7b7b7; }
