--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     = stylesheet_link_tag "http://yui.yahooapis.com/2.8.0r4/build/reset-fonts-grids/reset-fonts-grids.css"
     = stylesheet_link_tag "welcome.css"
     %meta{:name => "description", :content => "Official page of Pierre Valade"}
+    <meta name="google-site-verification" content="ERsrKszS2eKc00D_uNaVDCUWfeBt-Jj6HobGvXSQcnE" />
     %link{:rel => "image_src", :href => "http://pierrevalade.com/images/pierre.jpg"}
   %body
     #custom-doc
