added /domains page

--- a/public/stylesheets/sass/welcome.sass
+++ b/public/stylesheets/sass/welcome.sass
@@ -71,3 +71,10 @@ body
       :margin 0 11px 0 11px
       :border 1px solid #b7b7b7
     
+.domains.index
+  .wrapper
+    :text-align center
+    :font-size 189%
+    :padding 50px 0
+    p
+      :margin-top 20px
