--- a/public/stylesheets/welcome.css
+++ b/public/stylesheets/welcome.css
@@ -61,3 +61,10 @@ body {
     float: left;
     margin: 0 11px 0 11px;
     border: 1px solid #b7b7b7; }
+
+.domains.index .wrapper {
+  text-align: center;
+  font-size: 189%;
+  padding: 50px 0; }
+  .domains.index .wrapper p {
+    margin-top: 20px; }
