--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,5 +1,7 @@
-%html
+!!! XHTML
+%html{:xmlns => "http://www.w3.org/1999/xhtml", "xml:lang" => "en"}
   %head
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     %title= "Pierre Valade"
     = stylesheet_link_tag "http://yui.yahooapis.com/2.8.0r4/build/reset-fonts-grids/reset-fonts-grids.css"
     = stylesheet_link_tag "welcome.css"
