new title, description

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,10 +2,10 @@
 %html{:xmlns => "http://www.w3.org/1999/xhtml", "xml:lang" => "en"}
   %head
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    %title= "Pierre Valade"
+    %title= "Pierre Valade - geek, entrepreneur, web/mobile developper"
     = stylesheet_link_tag "http://yui.yahooapis.com/2.8.0r4/build/reset-fonts-grids/reset-fonts-grids.css"
     = stylesheet_link_tag "welcome.css"
-    %meta{:name => "description", :content => "Official page of Pierre Valade"}
+    %meta{:name => "description", :content => "I'm excited about making the world a better place using new technologies. Follow me!"}
     <meta name="google-site-verification" content="ERsrKszS2eKc00D_uNaVDCUWfeBt-Jj6HobGvXSQcnE" />
     %link{:rel => "image_src", :href => "http://pierrevalade.com/images/pierre.jpg"}
   %body
